# bachelorproject

./: Cargo.toml  index.html  index.md
.github/workflows/: gh-pages.yml  rust.yml
css/: index.css
examples/matita_sttfa/: bigops.dk  bool.dk  cong.dk  connectives.dk  dedukti.mk  deps.mk  div_mod.dk  exp.dk  fact.dk  fermat.dk  gcd.dk  kontroli.mk  logic.dk  mod.dk  nat.dk  permutation.dk  pi.dk  primes.dk  relations.dk  sigma_pi.dk  sttfa.dk  theorem.dk.txt
js/: editor.js  init_wasm.js  kocheck.js  parsemake.js  program.js  worker.js  worker_graph.js  worker_run_multiple.js
koweb/: Cargo.toml
koweb/src/: fetch_buffer.rs  lazy_fetch.rs  lib.rs  parse_make.rs
koweb/www/: index.html
koweb/www/css/: index.css
koweb/www/js/: editor.js  init_wasm.js  kocheck.js  parsemake.js  worker.js  worker_graph.js
pkg/: koweb.d.ts  koweb.js  koweb_bg.wasm  koweb_bg.wasm.d.ts  package.json
pkg/snippets/koweb-f1445fac41f4790a/www/js/: init_wasm.js  kocheck.js  program.js
pkg/snippets/rust-webpack-template-eb3e344350874cf2/www/js/: editor.js  kocheck.js  program.js
