[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
name = "koweb"
path = "./src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
colosseum = "0.2"
wasm-bindgen = "^0.2"
kocheck = { path = "../kocheck" }
kontroli = { path = "../kontroli" }
console_error_panic_hook = "0.1.6"

