[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
name = "koweb"
path = "./src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.7"
colosseum = "0.2"
byte-unit = "3.0"
wasm-bindgen = "^0.2"
kocheck = { path = "../kocheck" }
kontroli = { path = "../kontroli" }
console_error_panic_hook = "0.1.6"
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

