[package]
name = "koweb"
description = "kontroli wasm"
version = "0.1.0"
authors = ["joshua.caumont@gmail.com"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
name = "koweb"
path = "./src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.7"
colosseum = "0.2"
byte-unit = "3.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.23"
kocheck = { path = "../kocheck" }
kontroli = { path = "../kontroli" }
console_error_panic_hook = "0.1.6"
log = "0.4.6"
console_log = { version = "0.2", features = ["color"] }
wasm-logger = "0.2.0"
solvent = "0.8.2"
reqwest = {version = "0.11.3", features = ["blocking"] }
error-chain = "0.12.4"
# tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3.14"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

